style: :lipstick: Add close icon to product detail and fix the arrow left icon positioning on mobile

--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 24px 16px;
+  padding: 48px 16px;
   width: inherit;
   max-width: 400px;
 }
@@ -334,7 +334,17 @@ body {
 }
 
 .product-container__close-icon-container {
-  display: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 12px;
+  top: 12px;
+  border-radius: 50%;
+  background-color: var(--white);
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
 }
 
 .product-container__sliding-circles {
@@ -559,6 +569,10 @@ body {
     height: auto;
   }
 
+  .shopping-cart {
+    padding: 24px 16px;
+  }
+
   .shopping-cart__arrow-left-icon-mobile {
     display: none;
   }
@@ -589,20 +603,6 @@ body {
 
   .product-container__img-container {
     position: relative;
-  }
-
-  .product-container__close-icon-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    left: 12px;
-    top: 12px;
-    border-radius: 50%;
-    background-color: var(--white);
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
   }
 
   .product-container__product-price,
